# Projects_Notifier

./: .dockerignore  .gitignore  .graphqlrc.yml  Cargo.toml  Dockerfile  compose.yaml  schema.json
app/: Cargo.toml
app/src/: adapter.rs  main.rs  redis_wrapper.rs
github/: Cargo.toml
github/graphql/: authenticate.graphql  get_organization_projects.graphql  getprojecttask.graphql  userorganization.graphql  userorganizations.graphql
github/src/: client.rs  lib.rs  query.rs  scaler.rs
github/src/model/: mod.rs
slack/: Cargo.toml
slack/src/: blocks.rs  lib.rs  post.rs  traits.rs  webhook.rs
