[workspace]
members = [ 
    "app", 
    "github",
    "slack"
]
resolver = "2"

[workspace.dependencies]
graphql_client = "0.14.0"
reqwest = { verison = "0.12.7", default-features = true, features = ["json", "blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

