[workspace]
members = [ 
    "app", 
    "github",
    "slack"
]
resolver = "2"

[workspace.dependencies]
graphql_client = "0.14.0"
reqwest = { version = "0.11.27", default-features = true, features = ["json", "blocking", "multipart"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
# chrono = { verison = "0.4.38", default-features = true, features = ["serde"] }
chrono = { version = "0.4.38", default-features = true, features = ["serde"] }
anyhow = "1.0.89"